--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="block">
+		<button class="Inline" data-ns-test="block-inline-button">Test1</button>
+		<button class="Inline" data-ns-test="block-inline-button">Test2</button>
+	</div>
+	<div class="block" data-ns-test="block-inline-div">
+		<div class="block">Test1</div>
+		<div class="block">Test2</div>
+	</div>
+	<div class="block">
+		<span class="Inline" data-ns-test="block-inline-span">Test1</span>
+		<span class="Inline" data-ns-test="block-inline-span">Test2</span>
+	</div>
+	<div class="block">
+		<p class="inline" data-ns-test="block-inline-p">Test1</p>
+		<p class="inline" data-ns-test="block-inline-p">Test2</p>
+	</div>
+	<div class="block">
+		<input class="Inline" data-ns-test="block-inline-input" value="Test1">
+		<input class="Inline" data-ns-test="block-inline-input" value="Test2">
+	</div>
+	<div class="block">
+		<city class="Inline" data-ns-test="block-inline-cite">Test1</city>
+		<city class="Inline" data-ns-test="block-inline-cite">Test2</city>
+	</div>
+	<div class="block">
+		<code class="inline" data-ns-test="block-inline-code">Test1</code>
+		<code class="inline" data-ns-test="block-inline-code">Test2</code>
+	</div>
+	<div class="block">
+		 <h1 class="block" data-ns-test="block-inline-h1">Test1</h1>
+		<h1 class="block" data-ns-test="block-inline-h1">Test2</h1>
+	</div>
+	<div class="block">
+		 <sup class="Inline" data-ns-test="block-inline-sup">Test1</sup>
+		<sup class="	Inline" data-ns-test="block-inline-sup">Test2</sup>
+	</div>
+	<div class="block">
+		 <sup class="Inline" data-ns-test="block-inline-sub">Test1</sub>
+		<sup class="Inline" data-ns-test="block-inline-sub">Test2</sub>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
